<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="@string/layout_direction"
    android:orientation="vertical"
    android:padding="@dimen/_15adp"
    >

    <com.seentechs.newtaxidriver.common.custompalette.FontTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5adp"
        android:text="@string/new_version_available"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_16asp"
        app:fontname="@string/font_Medium"
        />

    <com.seentechs.newtaxidriver.common.custompalette.FontTextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5adp"
        android:padding="@dimen/_5adp"
        android:text="@string/update_desc"
        android:textColor="@color/newtaxi_app_black"
        android:textSize="@dimen/_14asp"
        app:fontname="@string/font_UBERBook"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10adp"
        >

        <com.seentechs.newtaxidriver.common.custompalette.FontTextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10adp"
            android:layout_marginEnd="@dimen/_10adp"
            android:layout_toStartOf="@+id/tv_update"
            android:padding="@dimen/_10adp"
            android:text="@string/skip"
            android:textColor="@color/newtaxi_app_light_grey"
            android:textSize="@dimen/_13asp"
            app:fontname="@string/font_Medium"
            />

        <com.seentechs.newtaxidriver.common.custompalette.FontTextView
            android:id="@+id/tv_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10adp"
            android:padding="@dimen/_10adp"
            android:text="@string/update"
            android:textColor="@color/newtaxi_app_navy"
            android:textSize="@dimen/_13asp"
            app:fontname="@string/font_Medium"
            />

    </RelativeLayout>

</LinearLayout>